[build-system]
requires = [
    "setuptools>=62.3.0",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "running-ng"
description = "Running: Next Generation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: System :: Benchmark',
    'Programming Language :: Python :: 3',
]
authors = [{name = "Zixian Cai", email = "u5937495@anu.edu.au"}]
dependencies = [
    "pyyaml~=6.0"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/anupli/running-ng"
"Bug Tracker" = "https://github.com/anupli/running-ng/issues"

[project.optional-dependencies]
zulip = [
    "zulip~=0.8.2"
]
tests = [
    "pytest>=7.1.3,<7.3.0",
    "types-PyYAML~=6.0.11",
    "mypy>=0.971,<2.0"
]

[project.scripts]
running = "running.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "running.__version__.__VERSION__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
running = ["config/**/*.yml"]
