[build-system]
requires = [
    "setuptools>=62.3.0",
    "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "running-ng"
description = "Running: Next Generation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Topic :: System :: Benchmark',
    'Programming Language :: Python :: 3',
]
authors = [{name = "Zixian Cai", email = "u5937495@anu.edu.au"}]
dependencies = [
    "pyyaml~=6.0.1"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/anupli/running-ng"
"Bug Tracker" = "https://github.com/anupli/running-ng/issues"

[project.optional-dependencies]
zulip = [
    "zulip~=0.9.0"
]
tests = [
    "pytest~=7.4.4",
    "types-PyYAML~=6.0.12",
    "mypy~=1.8.0"
]

[project.scripts]
running = "running.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "running.__version__.__VERSION__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
running = ["config/**/*.yml"]
